--- a/src/prog_scheme/prog-scheme.ipynb
+++ b/src/prog_scheme/prog-scheme.ipynb
@@ -116,7 +116,7 @@
     "atile2 = AnalogTile(output_size, input_size, rpu_config=rpuconfig)\n",
     "# atile2.load_state_dict(atile_dic, assign=True)\n",
     "atile3 = AnalogTile(output_size, input_size, rpu_config=rpuconfig)\n",
-    "atile3.load_state_dict(atile_dic, assign=True)\n",
+    "atile3.load_state_dict(atile_dic)\n",
     "print(atile.tile.get_info())"
    ]
   },
@@ -219,6 +219,101 @@
     "plt.xlabel(\"Iteration\")\n",
     "plt.ylabel(f\"{norm_type} norm of weight error\")\n",
     "plt.title(\"Error vs Iteration @ {}x{}, rank={}\".format(input_size, output_size, rank))\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## VISUALIZE UPDATES"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "from scipy import linalg\n",
+    "from sklearn.decomposition import PCA\n",
+    "\n",
+    "# 데이터 준비\n",
+    "# assert (atile.initial_weights - atile2.initial_weights).max() == 0\n",
+    "optimal_change = (w.T - atile2.initial_weights).flatten()\n",
+    "\n",
+    "data = np.array(atile.weight_update_log)\n",
+    "flattened_data = data.reshape(data.shape[0], -1)\n",
+    "cumulative_update = np.cumsum(flattened_data, axis=0)\n",
+    "\n",
+    "data2 = np.array(atile2.weight_update_log)\n",
+    "flattened_data2 = data2.reshape(data2.shape[0], -1)\n",
+    "cumulative_update2 = np.cumsum(flattened_data2, axis=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# PCA\n",
+    "distance = []\n",
+    "distance2 = []\n",
+    "for i in range(len(cumulative_update)):\n",
+    "    distance.append(optimal_change - cumulative_update[i])\n",
+    "\n",
+    "for i in range(len(cumulative_update2)):\n",
+    "    distance2.append(optimal_change - cumulative_update2[i])\n",
+    "\n",
+    "\n",
+    "distance = np.array(distance)\n",
+    "distnace2 = np.array(distance2)\n",
+    "concat_distances = np.concatenate((distance, distance2), axis=0)\n",
+    "pca = PCA(n_components=2)  # 2차원으로 축소\n",
+    "pca_result = pca.fit_transform(concat_distances)\n",
+    "\n",
+    "\n",
+    "# 원본 데이터를 PCA 공간에 직접 매핑\n",
+    "pca_result = np.dot(concat_distances, pca.components_.T)\n",
+    "\n",
+    "pca_gdp = pca_result[0 : max_iter - 1]\n",
+    "pca_svd = pca_result[max_iter : max_iter * 2 - 1]\n",
+    "\n",
+    "\n",
+    "# 그리드를 PCA 결과 값 범위에서 설정\n",
+    "x = np.linspace(pca_result[:, 0].min(), pca_result[:, 0].max(), 100)\n",
+    "y = np.linspace(pca_result[:, 1].min(), pca_result[:, 1].max(), 100)\n",
+    "X, Y = np.meshgrid(x, y)\n",
+    "\n",
+    "# PCA 공간에서 각 지점이 원점에서 얼마나 떨어져 있는지 거리 계산\n",
+    "Z = np.sqrt(X**2 + Y**2)  # 원점 (0,0)으로부터의 유클리드 거리\n",
+    "\n",
+    "# 결과 시각화\n",
+    "plt.figure(figsize=(5, 4))\n",
+    "contour = plt.contour(X, Y, Z, levels=20, cmap=\"viridis\")\n",
+    "plt.colorbar(contour, label=\"Distance from Origin (PCA space)\")\n",
+    "plt.scatter(pca_gdp[:, 0], pca_gdp[:, 1], alpha=0.7)\n",
+    "plt.scatter(pca_svd[:, 0], pca_svd[:, 1], alpha=0.3)\n",
+    "\n",
+    "plt.xlabel(\"First Principal Component\")\n",
+    "plt.ylabel(\"Second Principal Component\")\n",
+    "plt.title(\"PCA of Weight Updates with Distance Contours\")\n",
+    "\n",
+    "# 각 포인트에 인덱스 추가\n",
+    "for i, (x, y) in enumerate(pca_gdp):\n",
+    "    if i % 50 == 0:\n",
+    "        plt.annotate(str(i), (x, y), xytext=(5, 5), textcoords=\"offset points\")\n",
+    "\n",
+    "for i, (x, y) in enumerate(pca_svd):\n",
+    "    if i % 50 == 0:\n",
+    "        plt.annotate(str(i), (x, y), xytext=(5, 5), textcoords=\"offset points\")\n",
+    "\n",
+    "\n",
+    "plt.grid(True)\n",
+    "plt.tight_layout()\n",
     "plt.show()"
    ]
   },
@@ -477,7 +572,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
