feat: Update rpuconf2dict to check whether given instance is a default

--- a/src/prog_scheme/prog-scheme.ipynb
+++ b/src/prog_scheme/prog-scheme.ipynb
@@ -69,15 +69,15 @@
     "\n",
     "# pre_post_cfg = PrePostProcessingParameter(input_range=InputRangeParameter(enable=True))\n",
     "# device_cfg = ExpStepDevice()\n",
-    "device_cfg = IdealDevice()\n",
-    "update_cfg = UpdateParameters(pulse_type=PulseType.NONE)\n",
-    "rpuconfig = SingleRPUConfig(update=update_cfg, device=device_cfg)\n",
+    "# device_cfg = IdealDevice()\n",
+    "# update_cfg = UpdateParameters(pulse_type=PulseType.NONE)\n",
+    "# rpuconfig = SingleRPUConfig(update=update_cfg, device=device_cfg)\n",
     "# rpuconfig.forward.is_perfect = True\n",
     "# rpuconfig.device.w_max_dtod = 0\n",
     "# rpuconfig.device.w_min_dtod = 0\n",
-    "# rpuconfig = SingleRPUConfig()\n",
+    "rpuconfig = IdealizedPreset()\n",
     "conf = {\n",
-    "    **rpuconf2dict(rpuconfig, max_depth=1),\n",
+    "    **rpuconf2dict(rpuconfig, max_depth=2),\n",
     "    \"matrix\": {\"input_size\": input_size, \"output_size\": output_size, \"rank\": rank},\n",
     "    \"methods\": {\n",
     "        \"tolerance\": tol,\n",
@@ -99,7 +99,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Compare & Log"
+    "## Compare"
    ]
   },
   {
@@ -112,11 +112,11 @@
     "\n",
     "atile = AnalogTile(output_size, input_size, rpu_config=rpuconfig)  # with periphery\n",
     "atile_dic = {}\n",
-    "atile.state_dict(atile_dic)\n",
+    "# atile.state_dict(atile_dic)\n",
     "atile2 = AnalogTile(output_size, input_size, rpu_config=rpuconfig)\n",
     "# atile2.load_state_dict(atile_dic, assign=True)\n",
     "atile3 = AnalogTile(output_size, input_size, rpu_config=rpuconfig)\n",
-    "atile3.load_state_dict(atile_dic)\n",
+    "# atile3.load_state_dict(atile_dic)\n",
     "print(atile.tile.get_info())"
    ]
   },
@@ -136,7 +136,31 @@
     "# atile3.program_weights = svd_ekf.__get__(atile3, TileWithPeriphery)\n",
     "\n",
     "tiles = (atile, atile2)\n",
-    "names = (\"gdp2\", \"svd\")"
+    "names = (\"gdp2\", \"svd\")  # , \"ekf\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from src.utils.logging_utils import LogCapture\n",
+    "\n",
+    "log_list = []\n",
+    "with LogCapture() as logc:\n",
+    "    atile3.tile.set_weights(w.T)\n",
+    "    atile3.program_weights(process_noise_std=0.06, measurement_noise_std=0.06, max_iter=10)\n",
+    "    log_list = logc.get_log_list()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "torch.all(atile3.get_weights(realistic=True)[0] == atile3.get_weights(realistic=True)[0])"
    ]
   },
   {
@@ -146,6 +170,13 @@
    "outputs": [],
    "source": [
     "err_lists = program_n_log(tiles, w.T, conf.get(\"methods\", {}))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Log"
    ]
   },
   {
@@ -238,7 +269,7 @@
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "from scipy import linalg\n",
-    "from sklearn.decomposition import PCA\n",
+    "from sklearn.decomposition import TruncatedSVD\n",
     "\n",
     "# 데이터 준비\n",
     "# assert (atile.initial_weights - atile2.initial_weights).max() == 0\n",
@@ -259,7 +290,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# PCA\n",
+    "# Calculate distances\n",
     "distance = []\n",
     "distance2 = []\n",
     "for i in range(len(cumulative_update)):\n",
@@ -268,49 +299,47 @@
     "for i in range(len(cumulative_update2)):\n",
     "    distance2.append(optimal_change - cumulative_update2[i])\n",
     "\n",
-    "\n",
     "distance = np.array(distance)\n",
-    "distnace2 = np.array(distance2)\n",
+    "distance2 = np.array(distance2)\n",
     "concat_distances = np.concatenate((distance, distance2), axis=0)\n",
-    "pca = PCA(n_components=2)  # 2차원으로 축소\n",
-    "pca_result = pca.fit_transform(concat_distances)\n",
     "\n",
+    "# Apply TruncatedSVD\n",
+    "svd = TruncatedSVD(n_components=2)\n",
+    "svd_result = svd.fit_transform(distance)\n",
     "\n",
-    "# 원본 데이터를 PCA 공간에 직접 매핑\n",
-    "pca_result = np.dot(concat_distances, pca.components_.T)\n",
+    "# Map original data to SVD space\n",
     "\n",
-    "pca_gdp = pca_result[0 : max_iter - 1]\n",
-    "pca_svd = pca_result[max_iter : max_iter * 2 - 1]\n",
+    "svd_gdp = svd_result[0 : max_iter - 1]\n",
+    "svd_svd = svd_result[max_iter : max_iter * 2 - 1]\n",
     "\n",
-    "\n",
-    "# 그리드를 PCA 결과 값 범위에서 설정\n",
-    "x = np.linspace(pca_result[:, 0].min(), pca_result[:, 0].max(), 100)\n",
-    "y = np.linspace(pca_result[:, 1].min(), pca_result[:, 1].max(), 100)\n",
+    "# Set grid in SVD result range\n",
+    "x = np.linspace(svd_result[:, 0].min(), svd_result[:, 0].max(), 100)\n",
+    "y = np.linspace(svd_result[:, 1].min(), svd_result[:, 1].max(), 100)\n",
     "X, Y = np.meshgrid(x, y)\n",
     "\n",
-    "# PCA 공간에서 각 지점이 원점에서 얼마나 떨어져 있는지 거리 계산\n",
-    "Z = np.sqrt(X**2 + Y**2)  # 원점 (0,0)으로부터의 유클리드 거리\n",
+    "# Calculate distance from origin in SVD space\n",
+    "Z = np.sqrt(X**2 + Y**2)\n",
     "\n",
-    "# 결과 시각화\n",
+    "# Visualization\n",
     "plt.figure(figsize=(5, 4))\n",
     "contour = plt.contour(X, Y, Z, levels=20, cmap=\"viridis\")\n",
-    "plt.colorbar(contour, label=\"Distance from Origin (PCA space)\")\n",
-    "plt.scatter(pca_gdp[:, 0], pca_gdp[:, 1], alpha=0.7)\n",
-    "plt.scatter(pca_svd[:, 0], pca_svd[:, 1], alpha=0.3)\n",
+    "plt.colorbar(contour, label=\"Distance from Origin (SVD space)\")\n",
+    "plt.scatter(svd_gdp[:, 0], svd_gdp[:, 1], alpha=0.7, label=\"gdp2\")\n",
+    "plt.scatter(svd_svd[:, 0], svd_svd[:, 1], alpha=0.3, label=\"svd\")\n",
+    "plt.legend()\n",
     "\n",
     "plt.xlabel(\"First Principal Component\")\n",
     "plt.ylabel(\"Second Principal Component\")\n",
-    "plt.title(\"PCA of Weight Updates with Distance Contours\")\n",
+    "plt.title(\"Truncated SVD of Weight Updates with Distance Contours\")\n",
     "\n",
-    "# 각 포인트에 인덱스 추가\n",
-    "for i, (x, y) in enumerate(pca_gdp):\n",
+    "# Add index to each point\n",
+    "for i, (x, y) in enumerate(svd_gdp):\n",
     "    if i % 50 == 0:\n",
     "        plt.annotate(str(i), (x, y), xytext=(5, 5), textcoords=\"offset points\")\n",
     "\n",
-    "for i, (x, y) in enumerate(pca_svd):\n",
+    "for i, (x, y) in enumerate(svd_svd):\n",
     "    if i % 50 == 0:\n",
     "        plt.annotate(str(i), (x, y), xytext=(5, 5), textcoords=\"offset points\")\n",
-    "\n",
     "\n",
     "plt.grid(True)\n",
     "plt.tight_layout()\n",
@@ -322,6 +351,34 @@
    "metadata": {},
    "source": [
     "## GDP batch-size effect"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.decomposition import PCA\n",
+    "\n",
+    "pca = PCA(n_components=2)\n",
+    "pca_result = pca.fit_transform(distance)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.allclose(svd_result, pca_result)"
    ]
   },
   {
@@ -558,7 +615,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "ml",
+   "display_name": "aihw",
    "language": "python",
    "name": "python3"
   },
@@ -572,7 +629,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
