feat: Generalize svd method to svd per k iters & fix minor rpuconf2dict error

--- a/src/prog_scheme/prog-scheme.ipynb
+++ b/src/prog_scheme/prog-scheme.ipynb
@@ -31,7 +31,7 @@
     "tol = 1e-8\n",
     "max_iter = 1000\n",
     "norm_type = \"fro\"\n",
-    "\n",
+    "svd_every_k_iter = 2\n",
     "# generate low rank matrix\n",
     "w = torch.randn(input_size, output_size)\n",
     "w.clamp_(-1, 1)\n",
@@ -67,15 +67,16 @@
     "\n",
     "from src.prog_scheme.utils import program_n_log, rpuconf2dict\n",
     "\n",
-    "# pre_post_cfg = PrePostProcessingParameter(input_range=InputRangeParameter(enable=True))\n",
+    "pre_post_cfg = PrePostProcessingParameter(input_range=InputRangeParameter(enable=True))\n",
     "# device_cfg = ExpStepDevice()\n",
-    "# device_cfg = IdealDevice()\n",
-    "# update_cfg = UpdateParameters(pulse_type=PulseType.NONE)\n",
-    "# rpuconfig = SingleRPUConfig(update=update_cfg, device=device_cfg)\n",
-    "# rpuconfig.forward.is_perfect = True\n",
-    "# rpuconfig.device.w_max_dtod = 0\n",
+    "device_cfg = IdealDevice()\n",
+    "update_cfg = UpdateParameters(pulse_type=PulseType.NONE)\n",
+    "rpuconfig = SingleRPUConfig(update=update_cfg, device=device_cfg)\n",
+    "rpuconfig.forward.out_noise = 0.01\n",
+    "rpuconfig.forward.inp_res = 0\n",
+    "# rpuconfig.device.w_max_dtod = 0.01\n",
     "# rpuconfig.device.w_min_dtod = 0\n",
-    "rpuconfig = IdealizedPreset()\n",
+    "# rpuconfig = IdealizedPreset()\n",
     "conf = {\n",
     "    **rpuconf2dict(rpuconfig, max_depth=2),\n",
     "    \"matrix\": {\"input_size\": input_size, \"output_size\": output_size, \"rank\": rank},\n",
@@ -84,6 +85,7 @@
     "        \"max_iter\": max_iter,\n",
     "        \"batch_size\": batch_size,\n",
     "        \"norm_type\": norm_type,\n",
+    "        \"svd_every_k_iter\": svd_every_k_iter,\n",
     "    },\n",
     "}"
    ]
@@ -137,30 +139,6 @@
     "\n",
     "tiles = (atile, atile2)\n",
     "names = (\"gdp2\", \"svd\")  # , \"ekf\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from src.utils.logging_utils import LogCapture\n",
-    "\n",
-    "log_list = []\n",
-    "with LogCapture() as logc:\n",
-    "    atile3.tile.set_weights(w.T)\n",
-    "    atile3.program_weights(process_noise_std=0.06, measurement_noise_std=0.06, max_iter=10)\n",
-    "    log_list = logc.get_log_list()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "torch.all(atile3.get_weights(realistic=True)[0] == atile3.get_weights(realistic=True)[0])"
    ]
   },
   {
@@ -271,15 +249,16 @@
     "from scipy import linalg\n",
     "from sklearn.decomposition import TruncatedSVD\n",
     "\n",
-    "# 데이터 준비\n",
     "# assert (atile.initial_weights - atile2.initial_weights).max() == 0\n",
     "optimal_change = (w.T - atile2.initial_weights).flatten()\n",
     "\n",
-    "data = np.array(atile.weight_update_log)\n",
+    "# 데이터 가공\n",
+    "actual_updates = atile.actual_weight_updates\n",
+    "data = np.array(actual_updates)\n",
     "flattened_data = data.reshape(data.shape[0], -1)\n",
     "cumulative_update = np.cumsum(flattened_data, axis=0)\n",
     "\n",
-    "data2 = np.array(atile2.weight_update_log)\n",
+    "data2 = np.array(atile2.actual_weight_updates)\n",
     "flattened_data2 = data2.reshape(data2.shape[0], -1)\n",
     "cumulative_update2 = np.cumsum(flattened_data2, axis=0)"
    ]
