--- a/src/prog_scheme/prog-scheme.ipynb
+++ b/src/prog_scheme/prog-scheme.ipynb
@@ -24,14 +24,16 @@
    "source": [
     "input_size = 100\n",
     "output_size = 50\n",
-    "rank = 10\n",
+    "rank = 20\n",
     "\n",
     "\n",
     "batch_size = 1\n",
     "tol = 1e-8\n",
-    "max_iter = 1000\n",
+    "max_iter = 2000\n",
     "norm_type = \"fro\"\n",
-    "svd_every_k_iter = 2\n",
+    "svd_every_k_iter = 1\n",
+    "read_noise_std = 0.1\n",
+    "update_noise_std = 0.1\n",
     "# generate low rank matrix\n",
     "w = torch.randn(input_size, output_size)\n",
     "w.clamp_(-1, 1)\n",
@@ -53,6 +55,7 @@
     "    ExpStepDevice,\n",
     "    FloatingPointDevice,\n",
     "    IdealDevice,\n",
+    "    LinearStepDevice,\n",
     "    SimpleDriftParameter,\n",
     ")\n",
     "from aihwkit.simulator.configs.utils import (\n",
@@ -68,12 +71,16 @@
     "from src.prog_scheme.utils import program_n_log, rpuconf2dict\n",
     "\n",
     "pre_post_cfg = PrePostProcessingParameter(input_range=InputRangeParameter(enable=True))\n",
-    "# device_cfg = ExpStepDevice()\n",
-    "device_cfg = IdealDevice()\n",
-    "update_cfg = UpdateParameters(pulse_type=PulseType.NONE)\n",
+    "device_cfg = LinearStepDevice()\n",
+    "# device_cfg = IdealDevice()\n",
+    "update_cfg = UpdateParameters(pulse_type=PulseType.STOCHASTIC_COMPRESSED)\n",
     "rpuconfig = SingleRPUConfig(update=update_cfg, device=device_cfg)\n",
-    "rpuconfig.forward.out_noise = 0.01\n",
-    "rpuconfig.forward.inp_res = 0\n",
+    "rpuconfig.forward.out_noise = read_noise_std\n",
+    "rpuconfig.device.write_noise_std = update_noise_std\n",
+    "rpuconfig.device.w_max = 1\n",
+    "rpuconfig.device.w_min = -1\n",
+    "rpuconfig.device.mult_noise = False  # additive noise\n",
+    "# rpuconfig.forward.inp_res = 0\n",
     "# rpuconfig.device.w_max_dtod = 0.01\n",
     "# rpuconfig.device.w_min_dtod = 0\n",
     "# rpuconfig = IdealizedPreset()\n",
@@ -86,6 +93,8 @@
     "        \"batch_size\": batch_size,\n",
     "        \"norm_type\": norm_type,\n",
     "        \"svd_every_k_iter\": svd_every_k_iter,\n",
+    "        \"read_noise_std\": read_noise_std,\n",
+    "        \"update_noise_std\": update_noise_std,\n",
     "    },\n",
     "}"
    ]
@@ -110,15 +119,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import copy\n",
+    "\n",
     "from aihwkit.simulator.tiles.analog import AnalogTile\n",
     "\n",
     "atile = AnalogTile(output_size, input_size, rpu_config=rpuconfig)  # with periphery\n",
     "atile_dic = {}\n",
-    "# atile.state_dict(atile_dic)\n",
-    "atile2 = AnalogTile(output_size, input_size, rpu_config=rpuconfig)\n",
+    "atile.state_dict(atile_dic)\n",
+    "# atile2 = AnalogTile(output_size, input_size, rpu_config=rpuconfig)\n",
+    "atile2 = copy.deepcopy(atile)\n",
     "# atile2.load_state_dict(atile_dic, assign=True)\n",
-    "atile3 = AnalogTile(output_size, input_size, rpu_config=rpuconfig)\n",
-    "# atile3.load_state_dict(atile_dic)\n",
+    "# atile3 = AnalogTile(output_size, input_size, rpu_config=rpuconfig)\n",
+    "atile3 = copy.deepcopy(atile)\n",
+    "# atile3.load_state_dict(atile_dic, assign=True)\n",
     "print(atile.tile.get_info())"
    ]
   },
@@ -130,15 +143,25 @@
    "source": [
     "from aihwkit.simulator.tiles.periphery import TileWithPeriphery\n",
     "\n",
-    "from src.prog_scheme.program_methods import gdp2, svd, svd_ekf\n",
+    "from src.prog_scheme.program_methods import gdp2, lqg_svd, svd\n",
     "\n",
     "# enroll the programming methods\n",
     "atile.program_weights = gdp2.__get__(atile, TileWithPeriphery)\n",
     "atile2.program_weights = svd.__get__(atile2, TileWithPeriphery)\n",
-    "# atile3.program_weights = svd_ekf.__get__(atile3, TileWithPeriphery)\n",
+    "atile3.program_weights = lqg_svd.__get__(atile3, TileWithPeriphery)\n",
     "\n",
-    "tiles = (atile, atile2)\n",
-    "names = (\"gdp2\", \"svd\")  # , \"ekf\")"
+    "tiles = (atile, atile2, atile3)\n",
+    "method_names = [t.program_weights.__name__ for t in tiles]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# atile3.tile.set_weights(w.T)\n",
+    "# atile3.program_weights()"
    ]
   },
   {
@@ -148,33 +171,6 @@
    "outputs": [],
    "source": [
     "err_lists = program_n_log(tiles, w.T, conf.get(\"methods\", {}))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Log"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import wandb\n",
-    "\n",
-    "with wandb.init(project=\"prog-scheme\", entity=\"spk\", config=conf, dir=\"../../logs\") as run:\n",
-    "    # Determine the maximum length\n",
-    "\n",
-    "    max_len = max([len(err_list) for err_list in err_lists])\n",
-    "    # Pad the lists with 0s\n",
-    "    for err_list in err_lists:\n",
-    "        err_list += [None] * (max_len - len(err_list))\n",
-    "    # Log the data\n",
-    "    for i in range(max_len):\n",
-    "        run.log({f\"{name}_{norm_type}\": err_list[i] for name, err_list in zip(names, err_lists)})"
    ]
   },
   {
@@ -204,14 +200,14 @@
     "W = (\n",
     "    w.T - atile.tile.get_weights(),\n",
     "    w.T - atile2.tile.get_weights(),\n",
-    "    # w.T - atile3.tile.get_weights(),\n",
+    "    w.T - atile3.tile.get_weights(),\n",
     ")\n",
     "plot_singular_values(W)\n",
     "print(\n",
-    "    f\"nuclear norm of \\n\"\n",
+    "    f\"{norm_type} norm of \\n\"\n",
     "    f\"atile: {torch.linalg.matrix_norm(W[0], ord=norm_type)},\\n\"\n",
     "    f\"atile2: {torch.linalg.matrix_norm(W[1], ord=norm_type)},\\n\"\n",
-    "    # f\"atile3: {torch.linalg.matrix_norm(W[2], ord='nuc')}\"\n",
+    "    f\"atile3: {torch.linalg.matrix_norm(W[2], ord=norm_type)}\"\n",
     ")"
    ]
   },
@@ -224,11 +220,40 @@
     "for err in err_lists:\n",
     "    plt.semilogy(err)\n",
     "# set legend\n",
-    "plt.legend([f\"gdp-seq(batchsize {batch_size})\", \"svd\"])\n",
+    "plt.legend([f\"gdp-seq(batchsize {batch_size})\", \"svd\", \"lqg\"])\n",
     "plt.xlabel(\"Iteration\")\n",
     "plt.ylabel(f\"{norm_type} norm of weight error\")\n",
     "plt.title(\"Error vs Iteration @ {}x{}, rank={}\".format(input_size, output_size, rank))\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Log"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import wandb\n",
+    "\n",
+    "with wandb.init(project=\"prog-scheme\", entity=\"spk\", config=conf, dir=\"../../logs\") as run:\n",
+    "    # Determine the maximum length\n",
+    "\n",
+    "    max_len = max([len(err_list) for err_list in err_lists])\n",
+    "    # Pad the lists with 0s\n",
+    "    for err_list in err_lists:\n",
+    "        err_list += [None] * (max_len - len(err_list))\n",
+    "    # Log the data\n",
+    "    for i in range(max_len):\n",
+    "        run.log(\n",
+    "            {f\"{name}_{norm_type}\": err_list[i] for name, err_list in zip(method_names, err_lists)}\n",
+    "        )"
    ]
   },
   {
@@ -258,7 +283,7 @@
     "flattened_data = data.reshape(data.shape[0], -1)\n",
     "cumulative_update = np.cumsum(flattened_data, axis=0)\n",
     "\n",
-    "data2 = np.array(atile2.actual_weight_updates)\n",
+    "data2 = np.array(atile3.actual_weight_updates)\n",
     "flattened_data2 = data2.reshape(data2.shape[0], -1)\n",
     "cumulative_update2 = np.cumsum(flattened_data2, axis=0)"
    ]
