--- a/src/prog_scheme/prog-scheme.ipynb
+++ b/src/prog_scheme/prog-scheme.ipynb
@@ -24,16 +24,16 @@
    "source": [
     "input_size = 100\n",
     "output_size = 50\n",
-    "rank = 20\n",
+    "rank = 10\n",
     "\n",
     "\n",
     "batch_size = 1\n",
     "tol = 1e-8\n",
-    "max_iter = 2000\n",
+    "max_iter = 1000\n",
     "norm_type = \"fro\"\n",
     "svd_every_k_iter = 1\n",
-    "read_noise_std = 0.1\n",
-    "update_noise_std = 0.1\n",
+    "read_noise_std = 0.01\n",
+    "update_noise_std = 0.01\n",
     "# generate low rank matrix\n",
     "w = torch.randn(input_size, output_size)\n",
     "w.clamp_(-1, 1)\n",
@@ -71,19 +71,21 @@
     "from src.prog_scheme.utils import program_n_log, rpuconf2dict\n",
     "\n",
     "pre_post_cfg = PrePostProcessingParameter(input_range=InputRangeParameter(enable=True))\n",
+    "# device_cfg = ExpStepDevice()\n",
     "device_cfg = LinearStepDevice()\n",
     "# device_cfg = IdealDevice()\n",
-    "update_cfg = UpdateParameters(pulse_type=PulseType.STOCHASTIC_COMPRESSED)\n",
+    "\n",
+    "update_cfg = UpdateParameters(pulse_type=PulseType.STOCHASTIC_COMPRESSED, desired_bl=127)\n",
     "rpuconfig = SingleRPUConfig(update=update_cfg, device=device_cfg)\n",
     "rpuconfig.forward.out_noise = read_noise_std\n",
     "rpuconfig.device.write_noise_std = update_noise_std\n",
     "rpuconfig.device.w_max = 1\n",
     "rpuconfig.device.w_min = -1\n",
+    "rpuconfig.device.w_max_dtod = 0.01\n",
+    "rpuconfig.device.w_min_dtod = 0.01\n",
     "rpuconfig.device.mult_noise = False  # additive noise\n",
     "# rpuconfig.forward.inp_res = 0\n",
-    "# rpuconfig.device.w_max_dtod = 0.01\n",
-    "# rpuconfig.device.w_min_dtod = 0\n",
-    "# rpuconfig = IdealizedPreset()\n",
+    "# rpuconfig = IdealizedPreset(update=update_cfg, device=device_cfg, pre_post=pre_post_cfg)\n",
     "conf = {\n",
     "    **rpuconf2dict(rpuconfig, max_depth=2),\n",
     "    \"matrix\": {\"input_size\": input_size, \"output_size\": output_size, \"rank\": rank},\n",
@@ -95,8 +97,18 @@
     "        \"svd_every_k_iter\": svd_every_k_iter,\n",
     "        \"read_noise_std\": read_noise_std,\n",
     "        \"update_noise_std\": update_noise_std,\n",
+    "        \"w_init\": 0.01,\n",
     "    },\n",
     "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "conf[\"update\"]"
    ]
   },
   {
@@ -141,27 +153,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from functools import partial\n",
+    "\n",
     "from aihwkit.simulator.tiles.periphery import TileWithPeriphery\n",
     "\n",
-    "from src.prog_scheme.program_methods import gdp2, lqg_svd, svd\n",
+    "from src.prog_scheme.program_methods import gdp2, svd, svd_kf\n",
     "\n",
     "# enroll the programming methods\n",
     "atile.program_weights = gdp2.__get__(atile, TileWithPeriphery)\n",
     "atile2.program_weights = svd.__get__(atile2, TileWithPeriphery)\n",
-    "atile3.program_weights = lqg_svd.__get__(atile3, TileWithPeriphery)\n",
-    "\n",
+    "atile3.program_weights = svd_kf.__get__(atile3, TileWithPeriphery)\n",
     "tiles = (atile, atile2, atile3)\n",
     "method_names = [t.program_weights.__name__ for t in tiles]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# atile3.tile.set_weights(w.T)\n",
-    "# atile3.program_weights()"
    ]
   },
   {
@@ -178,6 +181,16 @@
    "metadata": {},
    "source": [
     "## Visualize"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# atile2.tile.set_weights(w.T)\n",
+    "# atile2.program_weights(**conf.get(\"methods\", {}))"
    ]
   },
   {
@@ -219,8 +232,11 @@
    "source": [
     "for err in err_lists:\n",
     "    plt.semilogy(err)\n",
+    "    print(err[-1])\n",
     "# set legend\n",
-    "plt.legend([f\"gdp-seq(batchsize {batch_size})\", \"svd\", \"lqg\"])\n",
+    "plt.legend(method_names)\n",
+    "\n",
+    "\n",
     "plt.xlabel(\"Iteration\")\n",
     "plt.ylabel(f\"{norm_type} norm of weight error\")\n",
     "plt.title(\"Error vs Iteration @ {}x{}, rank={}\".format(input_size, output_size, rank))\n",
@@ -271,7 +287,6 @@
    "source": [
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
-    "from scipy import linalg\n",
     "from sklearn.decomposition import TruncatedSVD\n",
     "\n",
     "# assert (atile.initial_weights - atile2.initial_weights).max() == 0\n",
