fix: Set target weight range into (-1,1) after svd

--- a/src/prog_scheme/prog-scheme.ipynb
+++ b/src/prog_scheme/prog-scheme.ipynb
@@ -24,7 +24,7 @@
    "source": [
     "input_size = 100\n",
     "output_size = 50\n",
-    "rank = 10\n",
+    "rank = 50\n",
     "\n",
     "\n",
     "batch_size = 1\n",
@@ -36,10 +36,11 @@
     "update_noise_std = 0.01\n",
     "# generate low rank matrix\n",
     "w = torch.randn(input_size, output_size)\n",
-    "w.clamp_(-1, 1)\n",
+    "w = w.clamp_(-1, 1)\n",
     "if rank < min(w.shape):\n",
     "    u, s, v = torch.svd(w)\n",
-    "    w = torch.mm(u[:, :rank], torch.mm(torch.diag(s[:rank]), v[:, :rank].t()))"
+    "    w = torch.mm(u[:, :rank], torch.mm(torch.diag(s[:rank]), v[:, :rank].t()))\n",
+    "w /= w.abs().max()"
    ]
   },
   {
@@ -189,7 +190,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# atile2.tile.set_weights(w.T)\n",
+    "# atile2.tile.target_weights = w.T\n",
     "# atile2.program_weights(**conf.get(\"methods\", {}))"
    ]
   },
