--- a/src/prog_scheme/prog-scheme.ipynb
+++ b/src/prog_scheme/prog-scheme.ipynb
@@ -24,7 +24,8 @@
    "source": [
     "input_size = 100\n",
     "output_size = 50\n",
-    "rank = 50\n",
+    "rank = 20\n",
+    "dim = input_size * output_size\n",
     "\n",
     "\n",
     "batch_size = 1\n",
@@ -69,7 +70,8 @@
     "from aihwkit.simulator.presets.devices import IdealizedPresetDevice\n",
     "from aihwkit.simulator.tiles import FloatingPointTile\n",
     "\n",
-    "from src.prog_scheme.utils import program_n_log, rpuconf2dict\n",
+    "from src.prog_scheme.estimate import ExpDeviceEKF, LinearDeviceEKF\n",
+    "from src.prog_scheme.utils import rpuconf2dict\n",
     "\n",
     "pre_post_cfg = PrePostProcessingParameter(input_range=InputRangeParameter(enable=True))\n",
     "# device_cfg = ExpStepDevice()\n",
@@ -81,16 +83,37 @@
     "rpuconfig.forward.out_noise = read_noise_std\n",
     "rpuconfig.device.write_noise_std = update_noise_std\n",
     "rpuconfig.device.w_max = 1\n",
+    "rpuconfig.device.gamma_up = 0.1\n",
     "rpuconfig.device.w_min = -1\n",
     "rpuconfig.device.w_max_dtod = 0.01\n",
     "rpuconfig.device.w_min_dtod = 0.01\n",
     "rpuconfig.device.mult_noise = False  # additive noise\n",
     "# rpuconfig.forward.inp_res = 0\n",
     "# rpuconfig = IdealizedPreset(update=update_cfg, device=device_cfg, pre_post=pre_post_cfg)\n",
+    "\n",
+    "rpuconf_dict = rpuconf2dict(rpuconfig, max_depth=2)\n",
+    "if rpuconfig.device.__class__ == LinearStepDevice:\n",
+    "    device_ekf = LinearDeviceEKF(\n",
+    "        dim=dim,\n",
+    "        read_noise_std=read_noise_std,\n",
+    "        update_noise_std=update_noise_std,\n",
+    "        **rpuconf_dict[\"device\"],\n",
+    "    )\n",
+    "elif rpuconfig.device.__class__ == ExpStepDevice:\n",
+    "    device_ekf = ExpDeviceEKF(\n",
+    "        dim=dim,\n",
+    "        read_noise_std=read_noise_std,\n",
+    "        update_noise_std=update_noise_std,\n",
+    "        **rpuconf_dict[\"device\"],\n",
+    "    )\n",
+    "else:\n",
+    "    raise NotImplementedError\n",
+    "\n",
     "conf = {\n",
-    "    **rpuconf2dict(rpuconfig, max_depth=2),\n",
+    "    **rpuconf_dict,\n",
     "    \"matrix\": {\"input_size\": input_size, \"output_size\": output_size, \"rank\": rank},\n",
     "    \"methods\": {\n",
+    "        \"device_ekf\": device_ekf,\n",
     "        \"tolerance\": tol,\n",
     "        \"max_iter\": max_iter,\n",
     "        \"batch_size\": batch_size,\n",
@@ -101,15 +124,6 @@
     "        \"w_init\": 0.01,\n",
     "    },\n",
     "}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "conf[\"update\"]"
    ]
   },
   {
@@ -144,6 +158,7 @@
     "# atile2.load_state_dict(atile_dic, assign=True)\n",
     "# atile3 = AnalogTile(output_size, input_size, rpu_config=rpuconfig)\n",
     "atile3 = copy.deepcopy(atile)\n",
+    "atile4 = copy.deepcopy(atile)\n",
     "# atile3.load_state_dict(atile_dic, assign=True)\n",
     "print(atile.tile.get_info())"
    ]
@@ -158,13 +173,14 @@
     "\n",
     "from aihwkit.simulator.tiles.periphery import TileWithPeriphery\n",
     "\n",
-    "from src.prog_scheme.program_methods import gdp2, svd, svd_kf\n",
+    "from src.prog_scheme.program_methods import gdp2, svd, svd_ekf_lqg, svd_kf\n",
     "\n",
     "# enroll the programming methods\n",
     "atile.program_weights = gdp2.__get__(atile, TileWithPeriphery)\n",
     "atile2.program_weights = svd.__get__(atile2, TileWithPeriphery)\n",
     "atile3.program_weights = svd_kf.__get__(atile3, TileWithPeriphery)\n",
-    "tiles = (atile, atile2, atile3)\n",
+    "atile4.program_weights = svd_ekf_lqg.__get__(atile3, TileWithPeriphery)\n",
+    "tiles = (atile, atile2, atile3, atile4)\n",
     "method_names = [t.program_weights.__name__ for t in tiles]"
    ]
   },
@@ -174,7 +190,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from src.prog_scheme.utils import program_n_log\n",
+    "\n",
     "err_lists = program_n_log(tiles, w.T, conf.get(\"methods\", {}))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "conf[\"device\"]"
    ]
   },
   {
@@ -259,6 +286,7 @@
    "source": [
     "import wandb\n",
     "\n",
+    "conf[\"methods\"][\"device_ekf\"] = conf[\"methods\"][\"device_ekf\"].__class__.__name__\n",
     "with wandb.init(project=\"prog-scheme\", entity=\"spk\", config=conf, dir=\"../../logs\") as run:\n",
     "    # Determine the maximum length\n",
     "\n",
