fix: minor typo & set eps to 1e-8

--- a/src/prog_scheme/prog-scheme.ipynb
+++ b/src/prog_scheme/prog-scheme.ipynb
@@ -24,7 +24,7 @@
    "source": [
     "input_size = 100\n",
     "output_size = 50\n",
-    "rank = 20\n",
+    "rank = 50\n",
     "dim = input_size * output_size\n",
     "\n",
     "\n",
@@ -33,8 +33,8 @@
     "max_iter = 1000\n",
     "norm_type = \"fro\"\n",
     "svd_every_k_iter = 1\n",
-    "read_noise_std = 0.01\n",
-    "update_noise_std = 0.01\n",
+    "read_noise_std = 0.1\n",
+    "update_noise_std = 0.1\n",
     "# generate low rank matrix\n",
     "w = torch.randn(input_size, output_size)\n",
     "w = w.clamp_(-1, 1)\n",
@@ -83,7 +83,8 @@
     "rpuconfig.forward.out_noise = read_noise_std\n",
     "rpuconfig.device.write_noise_std = update_noise_std\n",
     "rpuconfig.device.w_max = 1\n",
-    "rpuconfig.device.gamma_up = 0.1\n",
+    "rpuconfig.device.gamma_up = 0.2\n",
+    "rpuconfig.device.gamma_down = 0.1\n",
     "rpuconfig.device.w_min = -1\n",
     "rpuconfig.device.w_max_dtod = 0.01\n",
     "rpuconfig.device.w_min_dtod = 0.01\n",
@@ -169,8 +170,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from functools import partial\n",
-    "\n",
     "from aihwkit.simulator.tiles.periphery import TileWithPeriphery\n",
     "\n",
     "from src.prog_scheme.program_methods import gdp2, svd, svd_ekf_lqg, svd_kf\n",
@@ -179,7 +178,7 @@
     "atile.program_weights = gdp2.__get__(atile, TileWithPeriphery)\n",
     "atile2.program_weights = svd.__get__(atile2, TileWithPeriphery)\n",
     "atile3.program_weights = svd_kf.__get__(atile3, TileWithPeriphery)\n",
-    "atile4.program_weights = svd_ekf_lqg.__get__(atile3, TileWithPeriphery)\n",
+    "atile4.program_weights = svd_ekf_lqg.__get__(atile4, TileWithPeriphery)\n",
     "tiles = (atile, atile2, atile3, atile4)\n",
     "method_names = [t.program_weights.__name__ for t in tiles]"
    ]
@@ -193,15 +192,6 @@
     "from src.prog_scheme.utils import program_n_log\n",
     "\n",
     "err_lists = program_n_log(tiles, w.T, conf.get(\"methods\", {}))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "conf[\"device\"]"
    ]
   },
   {
@@ -242,13 +232,15 @@
     "    w.T - atile.tile.get_weights(),\n",
     "    w.T - atile2.tile.get_weights(),\n",
     "    w.T - atile3.tile.get_weights(),\n",
+    "    w.T - atile4.tile.get_weights(),\n",
     ")\n",
     "plot_singular_values(W)\n",
     "print(\n",
     "    f\"{norm_type} norm of \\n\"\n",
     "    f\"atile: {torch.linalg.matrix_norm(W[0], ord=norm_type)},\\n\"\n",
     "    f\"atile2: {torch.linalg.matrix_norm(W[1], ord=norm_type)},\\n\"\n",
-    "    f\"atile3: {torch.linalg.matrix_norm(W[2], ord=norm_type)}\"\n",
+    "    f\"atile3: {torch.linalg.matrix_norm(W[2], ord=norm_type)}, \\n\"\n",
+    "    f\"atile4: {torch.linalg.matrix_norm(W[3], ord=norm_type)}\"\n",
     ")"
    ]
   },
@@ -412,13 +404,6 @@
     "pca = PCA(n_components=2)\n",
     "pca_result = pca.fit_transform(distance)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
