feat: Add svd_every_k_iter parameter for SVD updates in Kalman filters & rename kf

--- a/src/prog_scheme/prog-scheme.ipynb
+++ b/src/prog_scheme/prog-scheme.ipynb
@@ -70,7 +70,7 @@
     "from aihwkit.simulator.presets.devices import IdealizedPresetDevice\n",
     "from aihwkit.simulator.tiles import FloatingPointTile\n",
     "\n",
-    "from src.prog_scheme.estimate import ExpDeviceEKF, LinearDeviceEKF\n",
+    "from src.prog_scheme.kalman import ExpDeviceEKF, LinearDeviceEKF\n",
     "from src.prog_scheme.utils import rpuconf2dict\n",
     "\n",
     "pre_post_cfg = PrePostProcessingParameter(input_range=InputRangeParameter(enable=True))\n",
@@ -78,12 +78,12 @@
     "device_cfg = LinearStepDevice()\n",
     "# device_cfg = IdealDevice()\n",
     "\n",
-    "update_cfg = UpdateParameters(pulse_type=PulseType.STOCHASTIC_COMPRESSED, desired_bl=127)\n",
+    "update_cfg = UpdateParameters(pulse_type=PulseType.NONE_WITH_DEVICE, desired_bl=127)\n",
     "rpuconfig = SingleRPUConfig(update=update_cfg, device=device_cfg)\n",
     "rpuconfig.forward.out_noise = read_noise_std\n",
     "rpuconfig.device.write_noise_std = update_noise_std\n",
     "rpuconfig.device.w_max = 1\n",
-    "rpuconfig.device.gamma_up = 0.2\n",
+    "rpuconfig.device.gamma_up = 0.5\n",
     "rpuconfig.device.gamma_down = 0.1\n",
     "rpuconfig.device.w_min = -1\n",
     "rpuconfig.device.w_max_dtod = 0.01\n",
@@ -108,7 +108,8 @@
     "        **rpuconf_dict[\"device\"],\n",
     "    )\n",
     "else:\n",
-    "    raise NotImplementedError\n",
+    "    device_ekf = None\n",
+    "    # raise NotImplementedError\n",
     "\n",
     "conf = {\n",
     "    **rpuconf_dict,\n",
@@ -179,7 +180,8 @@
     "atile2.program_weights = svd.__get__(atile2, TileWithPeriphery)\n",
     "atile3.program_weights = svd_kf.__get__(atile3, TileWithPeriphery)\n",
     "atile4.program_weights = svd_ekf_lqg.__get__(atile4, TileWithPeriphery)\n",
-    "tiles = (atile, atile2, atile3, atile4)\n",
+    "tiles = [atile, atile2, atile3]\n",
+    "tiles.append(atile4) if device_ekf is not None else None\n",
     "method_names = [t.program_weights.__name__ for t in tiles]"
    ]
   },
@@ -228,20 +230,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "W = (\n",
-    "    w.T - atile.tile.get_weights(),\n",
-    "    w.T - atile2.tile.get_weights(),\n",
-    "    w.T - atile3.tile.get_weights(),\n",
-    "    w.T - atile4.tile.get_weights(),\n",
-    ")\n",
+    "W = [w.T - tile_.tile.get_weights() for tile_ in tiles]\n",
+    "\n",
     "plot_singular_values(W)\n",
-    "print(\n",
-    "    f\"{norm_type} norm of \\n\"\n",
-    "    f\"atile: {torch.linalg.matrix_norm(W[0], ord=norm_type)},\\n\"\n",
-    "    f\"atile2: {torch.linalg.matrix_norm(W[1], ord=norm_type)},\\n\"\n",
-    "    f\"atile3: {torch.linalg.matrix_norm(W[2], ord=norm_type)}, \\n\"\n",
-    "    f\"atile4: {torch.linalg.matrix_norm(W[3], ord=norm_type)}\"\n",
-    ")"
+    "print(f\"{norm_type} norm of \\n\")\n",
+    "for i, w in enumerate(W):\n",
+    "    print(f\"atile{i}: {torch.linalg.matrix_norm(w, ord=norm_type)},\\n\")"
    ]
   },
   {
