changed read methods

--- a/src/prog_scheme/prog-scheme.ipynb
+++ b/src/prog_scheme/prog-scheme.ipynb
@@ -26,7 +26,7 @@
     "output_size = 50\n",
     "rank = 50\n",
     "dim = input_size * output_size\n",
-    "\n",
+    "over_sampling = 10\n",
     "\n",
     "batch_size = 1\n",
     "tol = 1e-8\n",
@@ -78,7 +78,7 @@
     "device_cfg = LinearStepDevice()\n",
     "# device_cfg = IdealDevice()\n",
     "\n",
-    "update_cfg = UpdateParameters(pulse_type=PulseType.NONE_WITH_DEVICE, desired_bl=127)\n",
+    "update_cfg = UpdateParameters(pulse_type=PulseType.STOCHASTIC, desired_bl=127)\n",
     "rpuconfig = SingleRPUConfig(update=update_cfg, device=device_cfg)\n",
     "rpuconfig.forward.out_noise = read_noise_std\n",
     "rpuconfig.device.write_noise_std = update_noise_std\n",
@@ -124,8 +124,112 @@
     "        \"read_noise_std\": read_noise_std,\n",
     "        \"update_noise_std\": update_noise_std,\n",
     "        \"w_init\": 0.01,\n",
+    "        \"over_sampling\": over_sampling,\n",
     "    },\n",
     "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from typing import Any, List, Optional, Tuple, Union\n",
+    "\n",
+    "from aihwkit.simulator.tiles.analog import AnalogTile\n",
+    "from torch import Tensor, eye\n",
+    "from torch.autograd import no_grad\n",
+    "from torch.linalg import lstsq\n",
+    "\n",
+    "\n",
+    "class customread_tile(AnalogTile):\n",
+    "    @no_grad()\n",
+    "    def read_weights_(\n",
+    "        self,\n",
+    "        apply_weight_scaling: bool = False,\n",
+    "        x_values: Optional[Tensor] = None,\n",
+    "        over_sampling: int = 10,\n",
+    "    ) -> Tuple[Tensor, Optional[Tensor]]:\n",
+    "        \"\"\"Reads the weights (and biases) in a realistic manner\n",
+    "        by using the forward pass for weights readout.\n",
+    "\n",
+    "        Gets the tile weights and extracts the mathematical weight\n",
+    "        matrix and biases (if present, by determined by the ``self.analog_bias``\n",
+    "        parameter).\n",
+    "\n",
+    "        The weight will not be directly read, but linearly estimated\n",
+    "        using random inputs using the analog forward pass.\n",
+    "\n",
+    "        Note:\n",
+    "\n",
+    "            If the tile includes digital periphery (e.g. out scaling),\n",
+    "            these will be applied. Thus this weight is the logical\n",
+    "            weights that correspond to the weights in an FP network.\n",
+    "\n",
+    "        Note:\n",
+    "            weights are estimated using the ``lstsq`` solver from torch.\n",
+    "\n",
+    "        Args:\n",
+    "            apply_weight_scaling: Whether to rescale the given weight matrix\n",
+    "                and populate the digital output scaling factors as\n",
+    "                specified in the configuration\n",
+    "                :class:`~aihwkit.simulator.configs.MappingParameter`. A\n",
+    "                new ``weight_scaling_omega`` can be given. Note that\n",
+    "                this will overwrite the existing digital out scaling\n",
+    "                factors.\n",
+    "\n",
+    "            x_values: Values to use for estimating the matrix. If\n",
+    "                not given, inputs are standard normal vectors.\n",
+    "\n",
+    "            over_sampling: If ``x_values`` is not given,\n",
+    "                ``over_sampling * in_size`` random vectors are used\n",
+    "                for the estimation\n",
+    "\n",
+    "        Returns:\n",
+    "            a tuple where the first item is the ``[out_size, in_size]`` weight\n",
+    "            matrix; and the second item is either the ``[out_size]`` bias vector\n",
+    "            or ``None`` if the tile is set not to use bias.\n",
+    "\n",
+    "        Raises:\n",
+    "            TileError: in case wrong code usage of TileWithPeriphery\n",
+    "        \"\"\"\n",
+    "        dtype = self.get_dtype()\n",
+    "        if x_values is None:\n",
+    "            x_values = eye(self.in_size, self.in_size, device=self.device, dtype=dtype)\n",
+    "        else:\n",
+    "            x_values = x_values.to(self.device)\n",
+    "\n",
+    "        x_values = x_values.repeat(over_sampling, 1)\n",
+    "\n",
+    "        # forward pass in eval mode\n",
+    "        was_training = self.training\n",
+    "        is_indexed = self.is_indexed()\n",
+    "        self.eval()\n",
+    "        if is_indexed:\n",
+    "            self.analog_ctx.set_indexed(False)\n",
+    "        y_values = self.forward(x_values)\n",
+    "        if was_training:\n",
+    "            self.train()\n",
+    "        if is_indexed:\n",
+    "            self.analog_ctx.set_indexed(True)\n",
+    "\n",
+    "        if self.bias is not None:\n",
+    "            y_values -= self.bias\n",
+    "\n",
+    "        est_weight = lstsq(x_values, y_values).solution.T.cpu()\n",
+    "        weight, bias = self._separate_weights(est_weight)\n",
+    "\n",
+    "        if self.digital_bias:\n",
+    "            bias = self.bias.detach().cpu()\n",
+    "\n",
+    "        if not apply_weight_scaling:\n",
+    "            # we de-apply all scales\n",
+    "            alpha = self.get_scales()\n",
+    "            if alpha is not None:\n",
+    "                alpha = alpha.detach().cpu()\n",
+    "                return (weight / alpha.view(-1, 1), bias / alpha if self.analog_bias else bias)\n",
+    "        return weight, bias"
    ]
   },
   {
@@ -152,7 +256,7 @@
     "\n",
     "from aihwkit.simulator.tiles.analog import AnalogTile\n",
     "\n",
-    "atile = AnalogTile(output_size, input_size, rpu_config=rpuconfig)  # with periphery\n",
+    "atile = customread_tile(output_size, input_size, rpu_config=rpuconfig)  # with periphery\n",
     "atile_dic = {}\n",
     "atile.state_dict(atile_dic)\n",
     "# atile2 = AnalogTile(output_size, input_size, rpu_config=rpuconfig)\n",
@@ -184,6 +288,22 @@
     "tiles.append(atile4) if device_ekf is not None else None\n",
     "method_names = [t.program_weights.__name__ for t in tiles]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "atile.read_weights_()[0] - w.T"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
