chore: Add svd spectrun viz during prog & rename target_w

--- a/src/prog_scheme/prog-scheme.ipynb
+++ b/src/prog_scheme/prog-scheme.ipynb
@@ -24,24 +24,25 @@
    "source": [
     "input_size = 100\n",
     "output_size = 50\n",
-    "rank = 50\n",
+    "rank = 20\n",
     "dim = input_size * output_size\n",
-    "over_sampling = 10\n",
+    "over_sampling = 2\n",
     "\n",
     "batch_size = 1\n",
     "tol = 1e-8\n",
     "max_iter = 1000\n",
     "norm_type = \"fro\"\n",
-    "svd_every_k_iter = 1\n",
-    "read_noise_std = 0.1\n",
-    "update_noise_std = 0.1\n",
+    "svd_every_k_iter = 10\n",
+    "read_noise_std = 0.0\n",
+    "update_noise_std = 0.0\n",
     "# generate low rank matrix\n",
     "w = torch.randn(input_size, output_size)\n",
     "w = w.clamp_(-1, 1)\n",
     "if rank < min(w.shape):\n",
     "    u, s, v = torch.svd(w)\n",
-    "    w = torch.mm(u[:, :rank], torch.mm(torch.diag(s[:rank]), v[:, :rank].t()))\n",
-    "w /= w.abs().max()"
+    "    w_target = torch.mm(u[:, :rank], torch.mm(torch.diag(s[:rank]), v[:, :rank].t()))\n",
+    "w_target /= w_target.abs().max()\n",
+    "print(w_target[:5, :5])"
    ]
   },
   {
@@ -73,22 +74,22 @@
     "from src.prog_scheme.kalman import ExpDeviceEKF, LinearDeviceEKF\n",
     "from src.prog_scheme.utils import rpuconf2dict\n",
     "\n",
-    "pre_post_cfg = PrePostProcessingParameter(input_range=InputRangeParameter(enable=True))\n",
+    "pre_post_cfg = PrePostProcessingParameter(input_range=InputRangeParameter(enable=False))\n",
     "# device_cfg = ExpStepDevice()\n",
-    "device_cfg = LinearStepDevice()\n",
-    "# device_cfg = IdealDevice()\n",
+    "# device_cfg = LinearStepDevice()\n",
+    "device_cfg = IdealDevice()\n",
     "\n",
-    "update_cfg = UpdateParameters(pulse_type=PulseType.STOCHASTIC, desired_bl=127)\n",
+    "update_cfg = UpdateParameters(pulse_type=PulseType.STOCHASTIC_COMPRESSED, desired_bl=127)\n",
     "rpuconfig = SingleRPUConfig(update=update_cfg, device=device_cfg)\n",
-    "rpuconfig.forward.out_noise = read_noise_std\n",
-    "rpuconfig.device.write_noise_std = update_noise_std\n",
-    "rpuconfig.device.w_max = 1\n",
-    "rpuconfig.device.gamma_up = 0.5\n",
-    "rpuconfig.device.gamma_down = 0.1\n",
-    "rpuconfig.device.w_min = -1\n",
-    "rpuconfig.device.w_max_dtod = 0.01\n",
-    "rpuconfig.device.w_min_dtod = 0.01\n",
-    "rpuconfig.device.mult_noise = False  # additive noise\n",
+    "# rpuconfig.forward.out_noise = read_noise_std\n",
+    "# rpuconfig.device.write_noise_std = update_noise_std\n",
+    "# rpuconfig.device.w_max = 1\n",
+    "# rpuconfig.device.gamma_up = 0.5\n",
+    "# rpuconfig.device.gamma_down = 0.1\n",
+    "# rpuconfig.device.w_min = -1\n",
+    "# rpuconfig.device.w_max_dtod = 0.01\n",
+    "# rpuconfig.device.w_min_dtod = 0.01\n",
+    "# rpuconfig.device.mult_noise = False  # additive noise\n",
     "# rpuconfig.forward.inp_res = 0\n",
     "# rpuconfig = IdealizedPreset(update=update_cfg, device=device_cfg, pre_post=pre_post_cfg)\n",
     "\n",
@@ -284,7 +285,7 @@
     "atile2.program_weights = svd.__get__(atile2, TileWithPeriphery)\n",
     "atile3.program_weights = svd_kf.__get__(atile3, TileWithPeriphery)\n",
     "atile4.program_weights = svd_ekf_lqg.__get__(atile4, TileWithPeriphery)\n",
-    "tiles = [atile, atile2, atile3]\n",
+    "tiles = [atile, atile2]  # , atile3]\n",
     "tiles.append(atile4) if device_ekf is not None else None\n",
     "method_names = [t.program_weights.__name__ for t in tiles]"
    ]
@@ -295,25 +296,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "atile.read_weights_()[0] - w.T"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "from src.prog_scheme.utils import program_n_log\n",
     "\n",
-    "err_lists = program_n_log(tiles, w.T, conf.get(\"methods\", {}))"
+    "err_lists = program_n_log(tiles, w_target.T, conf.get(\"methods\", {}))"
    ]
   },
   {
@@ -341,21 +326,14 @@
    "source": [
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "from src.prog_scheme.utils import plot_singular_values"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "W = [w.T - tile_.tile.get_weights() for tile_ in tiles]\n",
+    "from src.prog_scheme.utils import plot_singular_values\n",
+    "\n",
+    "W = [w_target.T - tile_.tile.get_weights() for tile_ in tiles]\n",
     "\n",
     "plot_singular_values(W)\n",
     "print(f\"{norm_type} norm of \\n\")\n",
     "for i, w in enumerate(W):\n",
-    "    print(f\"atile{i}: {torch.linalg.matrix_norm(w, ord=norm_type)},\\n\")"
+    "    print(f\"atile{i}: {torch.linalg.matrix_norm(w, ord=norm_type)}\")"
    ]
   },
   {
@@ -374,6 +352,63 @@
     "plt.xlabel(\"Iteration\")\n",
     "plt.ylabel(f\"{norm_type} norm of weight error\")\n",
     "plt.title(\"Error vs Iteration @ {}x{}, rank={}\".format(input_size, output_size, rank))\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "weight_diffs = torch.stack(atile2.actual_weight_updates)\n",
+    "updated_weights = atile2.initial_weights + weight_diffs.cumsum(dim=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "w_final = atile2.tile.get_weights()\n",
+    "w_target_ = atile2.target_weights"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "w_target_[:5, :5]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "torch.allclose(w_target.T, w_target_, atol=1e-8)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for w in updated_weights[10:40:3]:\n",
+    "    w_diff = w_target.T - w.squeeze()\n",
+    "    s = torch.linalg.svdvals(w_diff)\n",
+    "    plt.plot(s)\n",
+    "    print(f\"{torch.linalg.norm(w_diff, ord='fro'):.4e}\")\n",
+    "plt.yscale(\"log\")\n",
+    "plt.xlabel(\"Singular Value Index\")\n",
+    "plt.ylabel(\"Singular Value\")\n",
+    "plt.title(\"Singular Values of Weight Matrix\")\n",
+    "plt.legend(range(10, 40, 3))\n",
     "plt.show()"
    ]
   },
