--- a/src/prog_scheme/prog-scheme.ipynb
+++ b/src/prog_scheme/prog-scheme.ipynb
@@ -13,34 +13,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import torch"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "import torch\n",
+    "\n",
     "input_size = 100\n",
     "output_size = 50\n",
-    "rank = 20\n",
+    "rank = 50\n",
     "dim = input_size * output_size\n",
-    "over_sampling = 1\n",
-    "x_rand = True\n",
+    "over_sampling = 2\n",
+    "x_rand = False\n",
     "\n",
     "batch_size = 1\n",
     "tol = 1e-8\n",
-    "max_iter = 200\n",
+    "max_iter = 1000\n",
     "norm_type = \"fro\"\n",
     "svd_every_k_iter = 10\n",
-    "read_noise_std = 0.0\n",
-    "update_noise_std = 0.0\n",
+    "read_noise_std = 0.1\n",
+    "update_noise_std = 0.1\n",
     "# generate low rank matrix\n",
-    "w = torch.randn(input_size, output_size)\n",
-    "w = w.clamp_(-1, 1)\n",
-    "if rank < min(w.shape):\n",
-    "    u, s, v = torch.svd(w)\n",
+    "w_target = torch.randn(input_size, output_size)\n",
+    "w_target = w_target.clamp_(-1, 1)\n",
+    "if rank < min(w_target.shape):\n",
+    "    u, s, v = torch.svd(w_target)\n",
     "    w_target = torch.mm(u[:, :rank], torch.mm(torch.diag(s[:rank]), v[:, :rank].t()))\n",
     "w_target /= w_target.abs().max()\n",
     "print(w_target[:5, :5])"
@@ -77,21 +70,21 @@
     "\n",
     "pre_post_cfg = PrePostProcessingParameter(input_range=InputRangeParameter(enable=False))\n",
     "# device_cfg = ExpStepDevice()\n",
-    "# device_cfg = LinearStepDevice()\n",
-    "device_cfg = IdealDevice()\n",
+    "device_cfg = LinearStepDevice()\n",
+    "# device_cfg = IdealDevice()\n",
     "\n",
-    "update_cfg = UpdateParameters(pulse_type=PulseType.STOCHASTIC_COMPRESSED, desired_bl=127)\n",
+    "update_cfg = UpdateParameters(pulse_type=PulseType.STOCHASTIC, desired_bl=127)\n",
     "rpuconfig = SingleRPUConfig(update=update_cfg, device=device_cfg)\n",
-    "# rpuconfig.forward.out_noise = read_noise_std\n",
-    "# rpuconfig.device.write_noise_std = update_noise_std\n",
-    "# rpuconfig.device.w_max = 1\n",
-    "# rpuconfig.device.gamma_up = 0.5\n",
-    "# rpuconfig.device.gamma_down = 0.1\n",
-    "# rpuconfig.device.w_min = -1\n",
-    "# rpuconfig.device.w_max_dtod = 0.01\n",
-    "# rpuconfig.device.w_min_dtod = 0.01\n",
-    "# rpuconfig.device.mult_noise = False  # additive noise\n",
-    "# rpuconfig.forward.inp_res = 0\n",
+    "rpuconfig.forward.out_noise = read_noise_std\n",
+    "rpuconfig.device.write_noise_std = update_noise_std\n",
+    "rpuconfig.device.w_max = 1\n",
+    "rpuconfig.device.gamma_up = 0.5\n",
+    "rpuconfig.device.gamma_down = 0.1\n",
+    "rpuconfig.device.w_min = -1\n",
+    "rpuconfig.device.w_max_dtod = 0.01\n",
+    "rpuconfig.device.w_min_dtod = 0.01\n",
+    "rpuconfig.device.mult_noise = False  # additive noise\n",
+    "rpuconfig.forward.inp_res = 0\n",
     "# rpuconfig = IdealizedPreset(update=update_cfg, device=device_cfg, pre_post=pre_post_cfg)\n",
     "\n",
     "rpuconf_dict = rpuconf2dict(rpuconfig, max_depth=2)\n",
@@ -290,7 +283,7 @@
     "atile2.program_weights = svd.__get__(atile2, TileWithPeriphery)\n",
     "atile3.program_weights = svd_kf.__get__(atile3, TileWithPeriphery)\n",
     "atile4.program_weights = svd_ekf_lqg.__get__(atile4, TileWithPeriphery)\n",
-    "tiles = [atile, atile2]  # , atile3]\n",
+    "tiles = [atile, atile2, atile3]\n",
     "tiles.append(atile4) if device_ekf is not None else None\n",
     "method_names = [t.program_weights.__name__ for t in tiles]"
    ]
